--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/hapi": "^16.1.7",
+    "@types/mqtt": "0.0.34",
     "@types/nes": "^6.2.8",
     "hapi": "^16.5.0",
+    "mqtt": "^2.9.3",
     "nes": "^6.4.3",
+    "rethinkdb-init": "^0.2.2",
+    "rethinkdbdash": "^2.3.30",
     "typescript": "^2.4.2"
   },
   "devDependencies": {
