--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc src/*.ts",
     "clean": "rm src/*.js",
-    "start": "node src/index.js",
+    "start": "nodemon",
     "dev": "nodemon"
   },
   "author": "",
@@ -15,14 +15,17 @@
     "@types/hapi": "^16.1.7",
     "@types/mqtt": "0.0.34",
     "@types/nes": "^6.2.8",
+    "@types/winston": "^2.3.8",
     "hapi": "^16.5.0",
     "mqtt": "^2.9.3",
     "nes": "^6.4.3",
     "rethinkdb-init": "^0.2.2",
     "rethinkdbdash": "^2.3.30",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "winston": "^2.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "ts-node": "^5.0.1"
   }
 }
